<resources>
    <string name="app_name">TRAILguide</string>
    <string name="trailguide">TRAILguide</string>
    <string name="artwork1">Vectors Market \nAnbileru Adaleru \nAndrejs Kirma \nHolly Mandarich \nCaleb Stultz</string>
    <string name="artwork2">Chris Schog \nAustin Neil \nJeremy Bishop \nMari Martin \nAmazon.com</string>
    <string name="back_to_the_app">back to the app</string>
    <string name="artwork_supplied_by">Artwork/Photos Supplied By:</string>
    <string name="this_app_is_built_as_a_final_project_n_of_the_n_devslopes_android_beginner_track">This app is built as a Final Project \n of the \n Devslopes Android Beginner Track.</string>
    <string name="devslopes_logo">Devslopes Logo</string>
    <string name="see_online">see online</string>
    <string name="item_image">Item Image</string>
    <string name="category_image">Category Image</string>
    <string name="logo">Logo</string>
    <string name= "selected_category">%s GEAR</string>
    <string name="show_item_images_off_on">Show Item Images Off/On</string>

</resources>
